[gd_scene load_steps=12 format=2]

[ext_resource path="res://resources/sprites/explosion1/explosion1_0005.png" type="Texture" id=1]
[ext_resource path="res://resources/sprites/explosion1/explosion1_0006.png" type="Texture" id=2]
[ext_resource path="res://resources/sprites/explosion1/explosion1_0002.png" type="Texture" id=3]
[ext_resource path="res://resources/sprites/explosion1/explosion1_0007.png" type="Texture" id=4]
[ext_resource path="res://resources/sprites/explosion1/explosion1_0001.png" type="Texture" id=5]
[ext_resource path="res://resources/sprites/explosion1/explosion1_0000.png" type="Texture" id=6]
[ext_resource path="res://resources/sprites/explosion1/explosion1_0004.png" type="Texture" id=7]
[ext_resource path="res://resources/sprites/explosion1/explosion1_0003.png" type="Texture" id=8]
[ext_resource path="res://scripts/RocketExplosion.gd" type="Script" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 4 ), null ],
"loop": false,
"name": "explosion1",
"speed": 12.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 182.901

[node name="RocketExplosion" type="Area2D" groups=[
"rocketExplosion",
]]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "explosion1"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -7.1272, 3.5636 )
shape = SubResource( 2 )
disabled = true

[node name="TimerUntilHurt" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
autostart = true
[connection signal="body_entered" from="." to="." method="_on_RocketExplosion_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="TimerUntilHurt" to="." method="_on_TimerUntilHurt_timeout"]
